# Vyuha-AI

./: .gitignore  README.md  agent.py  app.py  dataset_preprocessor.py  debug_pipeline.py  evaluate.py  instructions_for_smegs1.md  instructions_for_supervisor.md  knowledge_gs1.py  llm_as_judge_ds.csv  prompt_optimization.py  pyproject.toml  requirements.txt  sketch_tool.py
NCERT/: NCERT_Geography_11th.csv  NCERT_Geography_12th.csv  NCERT_History_11th.csv  debug_test.csv
